--- a/style.css
+++ b/style.css
@@ -3,9 +3,57 @@ span {
   background-color: red;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
+#modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#modal-content {
+  background-color: white;
+  margin: 25vh auto;
+  padding: 2.5%;
+  border: 1px solid black;
+  width: 90%;
+  min-height: 25%;
+}
+
+.btn-close-modal {
+  float: right;
+}
+
+.player-input {
+  display: flex;
+  align-items: baseline;
+}
+
 #info-bar {
   display: flex;
   justify-content: space-between;
   background-color: bisque;
   padding: 0.5rem;
+}
+
+#grid-container {
+  background-color: blue;
+  min-height: 70vh;
+  min-width: 90vw;
 }
