--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ span {
   background-color: red;
 }
 
+body {
+  width: 80vw;
+  margin: 0 auto;
+}
+
 button:hover {
   cursor: pointer;
 }
@@ -16,7 +21,6 @@ button:hover {
 }
 
 #modal {
-  /* display: none; */
   position: fixed;
   z-index: 1;
   left: 0;
@@ -45,6 +49,25 @@ button:hover {
   align-items: baseline;
 }
 
+.grid-size-row {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.grid-size-row button {
+  width: 7.5rem;
+  margin: 0.25rem;
+}
+
+.modal-buttons-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-top: 1rem;
+  width: 7.5rem;
+  gap: 0.5rem;
+}
+
 #info-bar {
   display: flex;
   justify-content: space-between;
@@ -55,5 +78,5 @@ button:hover {
 #grid-container {
   background-color: blue;
   min-height: 70vh;
-  min-width: 90vw;
+  min-width: 80vw;
 }
