--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ button:hover {
 #grid-container {
   background-color: blue;
   min-width: 80vw;
+  height: 50vh;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
