--- a/style.css
+++ b/style.css
@@ -76,19 +76,35 @@ button:hover {
 }
 
 #grid-container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   background-color: blue;
   min-width: 80vw;
   min-height: 50vh;
   padding: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
+/* .column0,
+.column1,
+.column2,
+.column3,
+.column4,
+.column5,
+.column6,
+.column7,
+.column8,
+.column9,
+.column10 {
+  text-align: center;
+  justify-content: center;
+  align-items: ;
+} */
+
 .cell {
-  min-width: 2rem;
-  min-height: 2rem;
+  width: 25px;
+  height: 25px;
   margin: 0.25rem;
   border-radius: 50%;
   background-color: white;
@@ -96,5 +112,11 @@ button:hover {
 }
 
 .cell:hover {
-  transform: scale(1.1);
+}
+
+.btn-column-button {
+  font-size: 10px;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
 }
