--- a/style.css
+++ b/style.css
@@ -96,5 +96,6 @@ button:hover {
 }
 
 .column:hover {
-  transform: scale(1.05);
+  transform: scale(1.1);
+  background-color: rgba(0, 0, 0, 0.2);
 }
