--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ button:hover {
   border: 3px black solid;
 }
 
-.column:hover {
+/* .column: {
   transform: scale(1.1);
   background-color: rgba(0, 0, 0, 0.2);
-}
+} */
