--- a/style.css
+++ b/style.css
@@ -95,7 +95,24 @@ button:hover {
   border: 3px black solid;
 }
 
-/* .column: {
-  transform: scale(1.1);
+#results-banner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.2);
-} */
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  padding-top: 33vh;
+  text-align: center;
+}
+
+.results-header {
+  color: white;
+  margin: 0 auto;
+}
+
+.btn-play-again {
+  height: 2rem;
+}
