rules modal and button functionality implemented

--- a/style.css
+++ b/style.css
@@ -116,3 +116,21 @@ button:hover {
 .btn-play-again {
   height: 2rem;
 }
+
+#rules-modal {
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  z-index: 10;
+  width: 50%;
+  height: 30%;
+  text-align: center;
+  color: white;
+  padding: 20px;
+}
+
+.btn-close-rules {
+  float: right;
+}
