--- a/style.css
+++ b/style.css
@@ -39,6 +39,30 @@ button:hover {
   min-height: 25%;
 }
 
+#player-settings-container {
+  /* background-color: red; */
+  padding: 5px;
+  display: flex;
+  gap: 20%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.modal-header {
+  text-align: center;
+}
+
+.btn-player,
+.color-player,
+.input-username {
+  margin-top: 10px;
+}
+
+.color-player {
+  padding: 0;
+}
+
 .btn-close-modal {
   float: right;
 }
