--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ button:hover {
 
 #results-banner {
   position: fixed;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.2);
@@ -150,11 +150,18 @@ button:hover {
   height: 100%;
   padding-top: 33vh;
   text-align: center;
+  color: black;
 }
 
-.results-header {
-  color: white;
+#results-content {
   margin: 0 auto;
+  background-color: rgba(255, 242, 189, 0.8);
+  width: 40%;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-play-again {
