--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-span {
-  /* background-color: red; */
-}
-
 body {
   width: 80vw;
   margin: 0 auto;
@@ -122,6 +118,18 @@ button:hover {
   border-radius: 50px;
 }
 
+.info-bar-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 40%;
+}
+
+#score-container p {
+  margin: 0;
+}
+
 #grid-container {
   display: grid;
   justify-content: center;
@@ -183,4 +191,50 @@ button:hover {
 
 .btn-rules {
   text-align: right;
+}
+
+@media only screen and (max-width: 500px) {
+  body {
+    width: 100vw;
+  }
+
+  #player-settings-container {
+    gap: 5%;
+  }
+
+  .input-username {
+    width: 75%;
+  }
+
+  #score-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #score-container p {
+    padding: 0;
+    margin: 0;
+  }
+
+  #info-bar {
+    width: 100%;
+    border-radius: 0;
+  }
+
+  #info-bar button {
+    width: 75%;
+    text-align: center;
+  }
+
+  .info-bar-button-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #rules-modal {
+    top: 35%;
+  }
 }
