--- a/style.css
+++ b/style.css
@@ -104,11 +104,6 @@ button:hover {
   justify-content: space-evenly;
 }
 
-.grid-size-row button {
-  width: 7.5rem;
-  margin: 0.25rem;
-}
-
 .modal-buttons-container {
   display: flex;
   flex-direction: column;
@@ -150,8 +145,8 @@ button:hover {
 }
 
 .cell {
-  width: 25px;
-  height: 25px;
+  width: 2.75rem;
+  height: 2.75rem;
   margin: 0.25rem;
   border-radius: 50%;
   border: 3px rgb(119, 110, 153) solid;
